# winotify

./: .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: flake8.yml  nuitka_build.yml  pylint.yml  unit_tests.yml
docs/: documentation.md
tests/: callback_example.py  test_toasts.py
winotify/: __init__.py  __main__.py  _communication.py  _registry.py  audio.py  config.py  winotify.py
